# dj-cors-example

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml
app/: views.py
client/: .eslintrc.js  package-lock.json  package.json  tsconfig.json  vite.config.ts
client/src/: App.vue
client/src/api/: index.ts
client/src/components/: HelloWorld.vue
config/: settings.py  urls.py  wsgi.py
